--- a/public/assets/plugins/global/plugins.bundle.rtl.css
+++ b/public/assets/plugins/global/plugins.bundle.rtl.css
@@ -29425,7 +29425,7 @@ i[class^=fonticon-]:before, i[class*=" fonticon-"]:before {
   height: 0.7rem;
   width: 0.7rem;
   top: 50%;
-  right: 3rem;
+  left: 3rem;
   position: absolute;
   transform: translateY(-50%);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%235E6278'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e");
